[gd_scene load_steps=10 format=3 uid="uid://bp1hsruqn2ikn"]

[ext_resource type="Script" path="res://scripts/enemy/honey_drop.gd" id="1_fjm2x"]
[ext_resource type="PackedScene" uid="uid://byt03rernj7cq" path="res://scenes/enemy/drop.tscn" id="1_mb7vy"]
[ext_resource type="Texture2D" uid="uid://b5ba0xhj2skmx" path="res://art/enemy/honey_drop.png" id="2_1k6aw"]
[ext_resource type="Texture2D" uid="uid://chv64luwhe0vo" path="res://art/enemy/honey_explosion.png" id="2_kdq6p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q78dv"]
atlas = ExtResource("2_kdq6p")
region = Rect2(0, 0, 144, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrga8"]
atlas = ExtResource("2_1k6aw")
region = Rect2(0, 0, 144, 69)

[sub_resource type="SpriteFrames" id="SpriteFrames_2q26l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q78dv")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrga8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc50r"]
size = Vector2(30, 47)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hyw57"]
radius = 41.0
height = 138.0

[node name="honey_drop" type="Node2D"]
script = ExtResource("1_fjm2x")

[node name="drop_component" parent="." instance=ExtResource("1_mb7vy")]
timer_length = 2.0
delete_timer_length = 1.0
fall_speed = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(8, -29)
sprite_frames = SubResource("SpriteFrames_2q26l")
animation = &"idle"

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["drop"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -23.5)
shape = SubResource("RectangleShape2D_sc50r")

[node name="explosion_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="explosion_hitbox"]
position = Vector2(9, -30)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hyw57")
disabled = true
debug_color = Color(3.85046e-07, 0.598513, 0.708486, 0.42)

[connection signal="body_entered" from="explosion_hitbox" to="." method="_on_explosion_hitbox_body_entered"]
